<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.uniba.di.sss1415.schedastudenti_menga_606362.AddStudent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTextView"
        android:id="@+id/nameTextView"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surnameTextView"
        android:id="@+id/surnameTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthTextView"
        android:id="@+id/birthTextView"
        android:layout_below="@+id/surnameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexTextView"
        android:id="@+id/sexTextView"
        android:layout_below="@+id/birthTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examTextView"
        android:id="@+id/examTextView"
        android:layout_below="@+id/sexTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingTextView"
        android:id="@+id/ratingTextView"
        android:layout_below="@+id/examTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberTextView"
        android:id="@+id/numberTextView"
        android:layout_below="@+id/ratingTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_above="@+id/surnameTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/birthTextView"
        android:layout_toEndOf="@+id/birthTextView"
        android:gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/surnameEditText"
        android:layout_above="@+id/birthTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/nameEditText"
        android:layout_alignStart="@+id/nameEditText"
        android:gravity="right" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_alignBottom="@+id/sexTextView"
        android:layout_toRightOf="@+id/birthTextView"
        android:layout_toEndOf="@+id/birthTextView"
        android:textOff="@string/sexToggleOff"
        android:textOn="@string/sexToggleOn"
        android:layout_alignRight="@+id/surnameEditText"
        android:layout_alignEnd="@+id/surnameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/examEditText"
        android:layout_above="@+id/ratingTextView"
        android:layout_alignRight="@+id/toggleButton"
        android:layout_alignEnd="@+id/toggleButton"
        android:gravity="right" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/examEditText"
        android:layout_alignRight="@+id/examEditText"
        android:layout_alignEnd="@+id/examEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/numberEditText"
        android:layout_below="@+id/numberTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="left" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNumberButton"
        android:id="@+id/addNumberButton"
        android:layout_alignBottom="@+id/numberEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelButton"
        android:id="@+id/cancelButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/numberEditText"
        android:layout_alignRight="@+id/toggleButton"
        android:layout_alignEnd="@+id/toggleButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okButton"
        android:id="@+id/okButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/numberTextView3"
        android:layout_toLeftOf="@+id/examEditText"
        android:layout_toStartOf="@+id/examEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/numberTextView1"
        android:layout_below="@+id/numberEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/numberTextView2"
        android:layout_below="@+id/numberTextView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/numberTextView3"
        android:layout_below="@+id/numberTextView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeNumberButton"
        android:id="@+id/removeNumberButton1"
        android:layout_below="@+id/addNumberButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeNumberButton"
        android:id="@+id/removeNumberButton2"
        android:focusable="false"
        android:layout_above="@+id/removeNumberButton3"
        android:layout_alignLeft="@+id/removeNumberButton1"
        android:layout_alignStart="@+id/removeNumberButton1"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeNumberButton"
        android:id="@+id/removeNumberButton3"
        android:layout_alignTop="@+id/numberTextView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTextView"
        android:layout_alignTop="@+id/birthTextView"
        android:layout_alignRight="@+id/removeNumberButton1"
        android:layout_alignEnd="@+id/removeNumberButton1"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>
